--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "lint": "eslint --ext .js,.vue src test/unit/specs test/e2e/specs"
   },
   "dependencies": {
+    "axios": "^0.17.1",
+    "font-awesome": "^4.7.0",
     "vue": "^2.3.3",
     "vue-router": "^2.3.1",
     "vuetify": "^0.17.4"
@@ -28,7 +30,7 @@
     "babel-preset-env": "^1.3.2",
     "babel-preset-stage-2": "^6.22.0",
     "babel-register": "^6.22.0",
-	"babel-polyfill": "^6.26.0",
+    "babel-polyfill": "^6.26.0",
     "chalk": "^2.0.1",
     "connect-history-api-fallback": "^1.3.0",
     "copy-webpack-plugin": "^4.0.1",
