--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
   "dependencies": {
     "axios": "^0.17.1",
     "font-awesome": "^4.7.0",
+    "image-resize": "^1.0.10",
+    "lodash": "^4.17.4",
     "vue": "^2.3.3",
     "vue-router": "^2.3.1",
     "vuetify": "^0.17.4",
