--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "font-awesome": "^4.7.0",
     "image-resize": "^1.0.10",
     "lodash": "^4.17.4",
+    "moment": "^2.20.1",
     "vue": "^2.3.3",
     "vue-router": "^2.3.1",
     "vuetify": "^0.17.4",
