--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "vue": "^2.3.3",
     "vue-pusher": "^0.2.1",
     "vue-router": "^2.3.1",
+    "vue-star-rating": "^1.5.1",
     "vue-timeago": "^3.4.4",
     "vuetify": "^1.0.3",
     "vuex": "^3.0.1"
