--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "lint": "eslint --ext .js,.vue src test/unit/specs test/e2e/specs"
   },
   "dependencies": {
+    "audit-log": "^0.9.1",
     "axios": "^0.17.1",
     "epic-spinners": "^1.0.2",
     "font-awesome": "^4.7.0",
@@ -22,6 +23,7 @@
     "moment": "^2.20.1",
     "pusher-js": "^4.2.2",
     "vue": "^2.3.3",
+    "vue-filter": "^0.2.4",
     "vue-pusher": "^0.2.1",
     "vue-router": "^2.3.1",
     "vue-star-rating": "^1.5.1",
